# redes_neuronales24

./: .gitignore  .pre-commit-config.yaml  build.sh  dataset.py  ejer2.py  ejer3.4.py  ejer3.5.py  informe.tex  informe_v2.tex  informe_v4.tex  integradores.py  perceptron_multilayer.py  perceptron_multilayer_pytorch.py  perceptron_multilayer_pytorch_xor.py  perceptron_multilayer_xor.py  practico10_escalar.py  practico10_escalar_perceptron_multicapa.py  practico10_gpt.py  practico10_gpt_xor.py  practico10_perceptron_multicapa.py  practico10_xor.py  practico11.py  practico12.py  practico12_colab.py  practico6_ejer2.py  practico6_ejer3.py  practico6_ejer6.py  practico9.py  practico9_2.py  practico9_escalar.py  practico9_gpt.py  practico9_vectorial.py  practico9_vectorial_bias.py  practico9_vectorial_bias_xor.py  practico9_version_no_vectorial.py  pyproject.toml  readme.md  redes_neuronales_2024_guia_10.ipynb  redes_neuronales_2024_guia_7.ipynb  redes_neuronales_2024_guia_8.ipynb  (+2 more)
trabajo_practico/: informe.tex  informe_v2.tex  informe_v3.tex  informe_v4.tex
trabajo_practico2/: informe.txt  resultados.p  results.p
trabajo_practico3/: practico13.py  practico13_con_encoder_pre_entrenado.py  practico13_gpt.py  practico13_sin_encoder_pre_entrenado.py  results.p  utils.py
