[tool.poetry]
name = "redes_neuronales_2024"
version = "1.0.0"
description = "redes_neuronales_2024"
authors = ["lvc0107"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.5.1"
#torchvision = "0.20.1"
#torchaudio = "2.5.1"
#torchviz = "0.0.2"
scikit-learn = "1.5.2"
numpy = "2.0.1"
scipy =  "1.13.1"
matplotlib = "3.9.2"
networkx = "3.2.1"
spyder-kernels = "2.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docs
  | reports
  | dist
  | lib
  | bin
  | include
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
